k8s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: django
  labels:
    name: django
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: django
  labels:
    app: django
spec:
  replicas: 5
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
      namespace: django
    spec:
      containers:
      - name: django
        image: quay.io/lagomes/django-example:latest
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"         

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django  
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8000
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django
  labels:
    app: django
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
  - hosts:
      - django.conectado.local
    secretName: django-secret
  defaultBackend:
    service:
      name: django-service
      port:
        number: 80
  rules:
  - host: django.conectado.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: django
  namespace: django
  labels:
    app: django
spec:
  host: django.apps.lagomes.rhbr-lab.com
  to:
    kind: Service
    name: django-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
status:
  ingress:
    - host: django.apps.lagomes.rhbr-lab.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.lagomes.rhbr-lab.com
